# antigen

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  camp.toml  clippy.toml  rust-analyzer.toml  rustfmt.toml
antigen/: Cargo.toml  README.md  build.rs
antigen-attestation/: Cargo.toml  README.md
antigen-attestation/src/: evaluate.rs  lib.rs  parser.rs  predicate.rs  schema.rs  tier.rs
antigen-attestation/tests/: atk_a3_audit_hints.rs  atk_a3_delta_chain_caps.rs  atk_a3_evidence_kind_axis.rs  atk_a3_oracle_schema.rs  atk_a3_scope_field.rs  atk_a3_substrate_leaves.rs  atk_a3_tolerance_audit_hint.rs  atk_a3_unification_guardrail.rs  atk_freshness_bypass.rs  end_to_end_substrate_witness.rs
antigen-fingerprint/: Cargo.toml  README.md
antigen-fingerprint/src/: digest.rs  glob.rs  lib.rs  matcher.rs  parser.rs  serialize.rs
antigen-fingerprint/tests/: atk_harden_serializer_edges.rs  atk_w6a_fingerprint_contracts.rs  digest_strip_list_completeness_guard.rs  serialize_roundtrip_proptest.rs
antigen-macros/: Cargo.toml  README.md
antigen-macros/proptest-regressions/: parse.txt
antigen-macros/src/: lib.rs  parse.rs
antigen-macros/tests/: atk_parser_adversarial.rs  atk_w4_span_contracts.rs  compile_fail.rs  compile_pass.rs
antigen-macros/tests/ui/: category_duplicate_in_array.rs  category_duplicate_in_array.stderr  category_empty_array.rs  category_empty_array.stderr  category_string_literal.rs  category_string_literal.stderr  category_unknown_variant.rs  category_unknown_variant.stderr  clonal_fixed_seed_rejected.rs  clonal_fixed_seed_rejected.stderr  diagnostic_class_collapsed.rs  diagnostic_class_collapsed.stderr  empty_name.rs  empty_name.stderr  generic_antigen_struct_rejected.rs  generic_antigen_struct_rejected.stderr  immune_missing_deprecation_warning.rs  immune_missing_deprecation_warning.stderr  immune_requires_both_witness_and_requires.rs  immune_requires_both_witness_and_requires.stderr  immune_requires_empty_anchor.rs  immune_requires_empty_anchor.stderr  immune_requires_empty_min_version.rs  immune_requires_empty_min_version.stderr  immune_requires_empty_signers.rs  immune_requires_empty_signers.stderr  immune_requires_unknown_leaf.rs  immune_requires_unknown_leaf.stderr  immune_without_witness.rs  missing_fingerprint.rs  (+36 more)
antigen-stroma/: Cargo.toml  README.md
antigen-stroma/src/: config_output.rs  db.rs  deferred.rs  fidelity.rs  lib.rs  scip.rs  write.rs
antigen-stroma/tests/: ATK-REGISTRY.md  atk_adversarial_survey.rs  atk_frame_digest_strip.rs  atk_frame_digest_strip_e2e.rs  atk_frame_digest_tier.rs  atk_frame_fidelity.rs  atk_frame_identity.rs  atk_frame_lastchanged.rs  atk_frame_locator_rename.rs  atk_frame_preimage_and_demotion.rs  atk_frame_tier_cap_construction.rs  atk_frame_v2_dedup_identity.rs  atk_scip_recon_001.rs  compile_fail.rs  frame_v2_constitute_lowering.rs
antigen/examples/: agentic_coordination.rs  antigen_category.rs  antigen_tolerance.rs  basic.rs  broken_witness.rs  bundled_catalog_scan.rs  convergent_clonal.rs  convergent_diagnostic.rs  convergent_igg.rs  crypto_misuse.rs  deferred_defense_anergy.rs  deferred_defense_immunosuppress.rs  deferred_defense_orient.rs  deferred_defense_poxparty.rs  delta_attestation.rs  descended_from.rs  deserialization.rs  drop_panic.rs  icr_001_near_miss_probe.rs  learn_propose.rs  marked_unknown.rs  mucosal_boundary.rs  numeric_truncation.rs  oracle_lifecycle.rs  panic_on_index.rs  phantom_witness.rs  prescriptive_board.rs  recurrent_emergence.rs  resource_lifecycle.rs  substrate_witness.rs  supply_chain_content_hash.rs  supply_chain_unpinned.rs  supply_chain_unsandboxed_proc_macro.rs  time_ordering.rs  tolerance_attested.rs  triage_commit.rs  vcs_info_loss.rs
antigen/proptest-regressions/: scan.txt
antigen/src/: audit.rs  category.rs  convergent.rs  dogfood.rs  finding.rs  lib.rs  mucosal.rs  pipeline.rs  scan.rs  vcs.rs  vcs_witness.rs
antigen/tests/: atk_047_near_miss_invariants.proptest-regressions  atk_047_near_miss_invariants.rs  atk_047_shape_fragility_seam.rs  atk_048_promoted_draft_seal.rs  atk_051_ratification_seal.rs  atk_a2_adversarial.rs  atk_a3_d15_audit_state7.rs  atk_a3_d15_propagation.rs  atk_a3_d3_cross_crate_enumeration.rs  atk_a3_fractal_preview.rs  atk_a3_substrate_witness_pipeline.rs  atk_adr029_defended_by_audit.rs  atk_adwin_boundaries.rs  atk_adwin_drift_detector.rs  atk_adwin_fusion_conservatism_join.rs  atk_antigen_generates.rs  atk_ce_adversarial.rs  atk_convergent_evidence_audit.rs  atk_curate_forget_path.rs  atk_deepcomb_fuse_nonfinite.rs  atk_deepcomb_mature_budget_zero.rs  atk_fused_classify_input3.rs  atk_harden_adwin_degenerate.rs  atk_immune_stacked_same_item_gap_mask.rs  atk_maturation_degenerate_inputs.rs  atk_mucosal_adversarial.rs  atk_multi_crate_scan.rs  atk_p0_is_discriminating_recursive_descent.rs  atk_p1_life_record_stock_conformance.rs  atk_p2prime_defended_status_sensor.rs  atk_parser_scan_adversarial.rs  atk_prescriptive_family_adr033.rs  atk_recurrent_adversarial.rs  atk_sc_adversarial.rs  atk_scan_coverage_adversarial.rs  atk_schema_lock.rs  atk_serde_validate_systematic.rs  atk_supply_chain_evaluate.rs  atk_survey_reader_blind_capability.rs  atk_three_valued_logic_boundary.rs  (+27 more)
camp/: Cargo.toml
camp/src/: antigens.rs  lib.rs  roles.rs
cargo-antigen/: Cargo.toml  README.md
cargo-antigen/src/: main.rs  mine.rs  pre_tag.rs
cargo-antigen/tests/: atk_a3_audit_tier_label_cli.rs  atk_a3_cli.rs  atk_a3_oracle_cli.rs  atk_act_suggest_floor.rs  atk_category_filter.rs  atk_convergent_recurrent_delivery_arm.rs  atk_dx_findings.rs  atk_e0_bundled_catalog_cli.rs  atk_fingerprint_subcommand.rs  atk_propose_live_bypass.rs  atk_propose_live_cli.rs  atk_scaffold_autofill.rs  atk_scan_output_cap.rs  atk_sign_fingerprint_format.rs  atk_strict_exit_code.rs  atk_supply_chain_delivery_arm.rs  atk_suppression_delivery_arm.rs  atk_vcs_recurrence.rs  atk_verify_dep_pin_write.rs  atk_version_flag.rs  examples_executable_workflow_integrity.rs  report_envelope_floor.rs
(+419 files in other folders)
