[workspace]
resolver = "2"
members = [
    "antigen",
    "antigen-attestation",
    "antigen-fingerprint",
    "antigen-macros",
    "cargo-antigen",
]

[workspace.package]
version = "0.1.0-rc.2"
edition = "2021"
rust-version = "1.85"
authors = ["Christopher Averill <c@tek.gy>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/antigen-rs/antigen"
homepage = "https://github.com/antigen-rs/antigen"
readme = "README.md"
keywords = ["immunity", "memory", "failure-class", "lint", "antibody"]
categories = ["development-tools", "development-tools::cargo-plugins", "development-tools::testing"]

[workspace.dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dev-only: property-based tests for parser invariants (W1).
# proptest 1.x has been stable since 2017; we hold to that line.
proptest = "1"
# Dev-only: trybuild compile-error fixture harness (W2).
trybuild = "1"
# Dev-only: tempdir helper for filesystem-fixture integration tests
# (used by `antigen/tests/atk_a2_adversarial.rs` and similar).
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Pedantic and nursery lints, opt-in to the strict-but-helpful subset.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow a few overly-strict pedantic lints that don't add value here.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Allow uninlined_format_args because it conflicts with rustfmt sometimes.
uninlined_format_args = "allow"
# Allow some lints inside doctests / examples where ergonomics matter.
needless_pass_by_value = "allow"
