[package]
name = "antigen-fingerprint"
description = "Fingerprint grammar parser + matcher for antigen failure-class declarations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
