[package]
name = "antigen-macros"
description = "Procedural macros for the antigen crate. Not for direct use; use antigen instead."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
antigen-fingerprint = { version = "=0.0.1", path = "../antigen-fingerprint" }

[dev-dependencies]
proptest = { workspace = true }
trybuild = { workspace = true }
