[package]
name = "antigen-macros"
description = "Procedural macros for the antigen crate. Not for direct use; use antigen instead."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
antigen-fingerprint = { version = "=0.1.0-rc.3", path = "../antigen-fingerprint" }
# Substrate-witness predicate parser is shared with the scan layer via the
# `parser` feature on antigen-attestation. The macro side only uses it for
# compile-time syntax validation + JSON lowering of `requires = <predicate>`;
# the scan side re-parses the same syntax directly from source attributes so
# the substrate-witness pipeline does not depend on macro expansion order.
antigen-attestation = { version = "=0.1.0-rc.3", path = "../antigen-attestation", features = ["parser"] }

[dev-dependencies]
proptest = { workspace = true }
trybuild = { workspace = true }
