[package]
name = "antigen-macros"
description = "Procedural macros for the antigen crate. Not for direct use; use antigen instead."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
antigen-fingerprint = { version = "=0.2.0-alpha.4", path = "../antigen-fingerprint" }
# Substrate-witness predicate parser is shared with the scan layer via the
# `parser` feature on antigen-attestation. The macro side only uses it for
# compile-time syntax validation + JSON lowering of `requires = <predicate>`;
# the scan side re-parses the same syntax directly from source attributes so
# the substrate-witness pipeline does not depend on macro expansion order.
antigen-attestation = { version = "=0.2.0-alpha.4", path = "../antigen-attestation", features = ["parser"] }
# chrono for parse-time UTC date enforcement in ADR-023 deferred-defense family
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# The `antigen-poxparty` feature activates structural isolation for `#[poxparty]`.
# MUST NOT be in the default feature set — the #[poxparty] macro checks the
# `CARGO_FEATURE_ANTIGEN_POXPARTY` env var at macro-expansion time and emits
# a compile error if it is absent. This feature exists here so the env var
# is set by Cargo when callers pass `--features antigen-poxparty`.
[features]
antigen-poxparty = []

[dev-dependencies]
proptest = { workspace = true }
trybuild = { workspace = true }
