[package]
name = "antigen-stroma"
description = "The stroma: a sovereign immune lattice over composed resolution (read-write-constitute coordinate frame + base node-set)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# The scan feeder: stroma consumes antigen's ScanReport/ItemTarget. Direction is
# stroma -> antigen (NEVER reverse), keeping antigen salsa-free for its light consumers.
antigen = { path = "../antigen" }
# The shape-digest (FNV) tier reused for clustering/backdate; identity-digest (BLAKE3) is added here.
antigen-fingerprint = { path = "../antigen-fingerprint" }

# The relational base + clock.
salsa = { workspace = true }
ascent = { workspace = true }   # ENGINE epoch fills the closure; frame declares so the stub typechecks
blake3 = { workspace = true }   # ADR-067 §A.2 identity-digest (signing tier)

serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
# Compile-state born-red harness (trybuild): the C3 "law encoded in types, not runtime" ATKs —
# TIER-CAP (syntactic cannot construct presents) + TORN-READ (publish-while-reading is a borrow
# error) assert the unsound interleaving does NOT compile. Same harness as antigen-macros.
trybuild = { workspace = true }
