[package]
name = "antigen"
description = "Structural memory of failure-classes for Rust. Make implicit immunity explicit."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
exclude = [
    "tests/fixtures/**",
    "proptest-regressions/**",
]

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
antigen-macros = { path = "../antigen-macros" }  # TEMP: version pin removed during placeholder-publish window; revert to "=0.1.0-rc.1" post-publish
antigen-fingerprint = { path = "../antigen-fingerprint" }  # TEMP: version pin removed during placeholder-publish window; revert to "=0.1.0-rc.1" post-publish
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
