[package]
name = "cargo-antigen"
description = "Cargo subcommand for antigen — scan, build, and apply structural failure-class antibodies in Rust codebases."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cargo-antigen"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
antigen = { version = "=0.2.0-beta.1", path = "../antigen" }
antigen-attestation = { version = "=0.2.0-beta.1", path = "../antigen-attestation" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
