[package]
name = "cargo-antigen"
description = "Cargo subcommand for antigen — scan, build, and apply structural failure-class antibodies in Rust codebases."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cargo-antigen"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
antigen = { version = "=0.3.0-beta.1", path = "../antigen" }
antigen-attestation = { version = "=0.3.0-beta.1", path = "../antigen-attestation" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
# Format-preserving TOML editor for `verify dep-pin --write` in-place rewrites
# (ADR-017-Amd1 posture: deps aren't precious; gate mutation-safety, not
# dep-count). Attested per antigen's own UnpinnedDependency discipline — pinned
# to a minor (0.22) so the supply-chain surface is explicit.
toml_edit = "0.22"
# Blocking HTTP client for `verify content-hash check --live` (the live
# crates.io tarball-SHA-256 verification). ureq (sync, rustls, tiny) over reqwest
# (async, tokio) — cargo-antigen is a sync CLI. Posture: dep approved; the
# offline-degradation behavior is the build-requirement (gated in code, never a
# hard error). default-features keeps rustls; no native-tls/openssl footprint.
ureq = "2"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
