[package]
name = "cargo-antigen"
description = "Cargo subcommand for antigen — scan, build, and apply structural failure-class antibodies in Rust codebases."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cargo-antigen"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
antigen = { version = "=0.6.0", path = "../antigen" }
antigen-attestation = { version = "=0.6.0", path = "../antigen-attestation" }
# `cargo antigen propose` (Island 3) re-acquires the marked cluster's + the clean
# corpus's ASTs from source — it parses `.rs` files (`syn`) and locates the
# enclosing item by its name-insensitive shape digest (`antigen-fingerprint`), the
# same two-digest discipline the scan records (ADR-045 Amd-1/2). Both are already
# transitive (antigen depends on them); naming them direct makes the propose
# cluster-assembly first-class in the CLI.
antigen-fingerprint = { version = "=0.6.0", path = "../antigen-fingerprint" }
syn = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
# Pure-Rust git plumbing for `cargo antigen mine` — the SZZ corpus-miner's
# full-object-graph walk (`rev-list --all`) over `.git`. The git I/O lives HERE
# in the CLI, not the antigen lib (ADR-002 / the vcs_witness pattern: the lib
# classifies already-read `CommitMeta`; the CLI reads git). See `mine.rs`.
gix = { workspace = true }
# Format-preserving TOML editor for `verify dep-pin --write` in-place rewrites
# (ADR-017-Amd1 posture: deps aren't precious; gate mutation-safety, not
# dep-count). Attested per antigen's own UnpinnedDependency discipline — pinned
# to a minor (0.22) so the supply-chain surface is explicit.
toml_edit = "0.22"
# Blocking HTTP client for `verify content-hash check --live` (the live
# crates.io tarball-SHA-256 verification). ureq (sync, rustls, tiny) over reqwest
# (async, tokio) — cargo-antigen is a sync CLI. Posture: dep approved; the
# offline-degradation behavior is the build-requirement (gated in code, never a
# hard error). default-features keeps rustls; no native-tls/openssl footprint.
ureq = "2"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
